test/files/neg/t5318.check
t5318.scala:7: error: diverging implicit expansion for type CompilerHang.this.TC[F]
starting with method tc in class CompilerHang.
 CompilerHang.this.breakage[F]
   CompilerHang.this.tc[M]
     CompilerHang.this.tc[M]
  breakage  // type checker doesn't terminate, should report inference failure
  ^
one error found
